unpackaged/main/default/objects/Account/fields/gearset_test_date__c.field-meta.xml
<CustomField>
    <fullName>gearset_test_date__c</fullName>
    <description>gearset test to be deleted</description>
    <label>gearset test date ?</label>
    <type>Date</type>
</CustomField>