unpackaged/main/default/objects/Account/fields/IsTestField__c.field-meta.xml
<CustomField>
    <fullName>IsTestField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test for gearset deployment</description>
    <label>is test gearset ?</label>
    <type>Checkbox</type>
</CustomField>