unpackaged/main/default/objects/Account/fields/test_gearset_id__c.field-meta.xml
<CustomField>
    <fullName>test_gearset_id__c</fullName>
    <description>test gearset id to be deleted</description>
    <label>test gearset id</label>
    <type>AutoNumber</type>
</CustomField>